// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colors renders correctly for an icon with color danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #c9444d !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: #c9444d;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  color="danger"
  role="img"
  size="1"
  style="size: 1px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`colors renders correctly for an icon with color primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: #444bc9;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  color="primary"
  role="img"
  size="1"
  style="size: 1px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`colors renders correctly for an icon with color success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #2c8453 !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: #2c8453;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  color="success"
  role="img"
  size="1"
  style="size: 1px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`colors renders correctly for an icon with color warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #f2a100 !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: #f2a100;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  color="warning"
  role="img"
  size="1"
  style="size: 1px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`renders correctly for a basic icon 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  role="img"
  size="1"
  style="size: 1px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`sizes renders correctly for an icon with size large 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: inherit;
  position: relative;
  font-size: 1.5em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  role="img"
  size="1.5"
  style="size: 1.5px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`sizes renders correctly for an icon with size medium 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: inherit;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  role="img"
  size="1.25"
  style="size: 1.25px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`sizes renders correctly for an icon with size small 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: inherit;
  position: relative;
  font-size: 0.8em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  role="img"
  style="size: 0.8px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`sizes renders correctly for an icon with size xlarge 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: inherit;
  position: relative;
  font-size: 2em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  role="img"
  size="2"
  style="size: 2px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`sizes renders correctly for an icon with size xxlarge 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: inherit;
  position: relative;
  font-size: 2.5em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  role="img"
  size="2.5"
  style="size: 2.5px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`sizes renders correctly for an icon with size xxxlarge 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  fill: inherit;
  position: relative;
  font-size: 3em;
  height: 1em;
  width: 1em;
}

<svg
  class="c0 c1"
  role="img"
  size="3"
  style="size: 3px;"
  viewBox="0 0 512 512"
>
  <title>
    Settings
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;
